# robond

./: .gitignore  .gitmodules  BACKTEST_DONE.md  BACKTEST_INTEGRATION.md  BACKTEST_README.md  BACKTEST_SUMMARY.md  Cargo.toml  Dockerfile  QUICKSTART_BACKTEST.md  README.md  deny.toml  history_sample.txt  railway.toml  schema.txt  ubprocess, os
.github/workflows/: CI.yml  deploy-frontend.yml
api_server/: Cargo.toml
api_server/src/: config.rs  crypto.rs  error.rs  main.rs  state.rs
api_server/src/auth/: handlers.rs  jwt.rs  middleware.rs  mod.rs  models.rs  password.rs
api_server/src/routes/: bonds.rs  cash.rs  holdings.rs  mod.rs  portfolio.rs  snapshots.rs  strategy.rs  tinvest.rs  valuation.rs
backtest_engine/: Cargo.toml  DEVELOPMENT.md  README.md
backtest_engine/examples/: compare_all_strategies.rs  diversified_short_duration_backtest.rs  most_profitable_bond_backtest.rs  simple_backtest.rs
backtest_engine/src/: backtest.rs  lib.rs  models.rs  simulator.rs  tests.rs
bonds_db/: Dockerfile.migrate  docker-compose.yml
bonds_db/migrations/: 000001_create_bonds_table.up.sql  000002_create_coupons_table.up.sql  000003_create_events_table.up.sql
bonds_db_client/: Cargo.toml
bonds_db_client/.sqlx/: query-068dceeca70ebce24c331d3a6074b7627f7c203fdcb3b580270590e97c5efc2a.json  query-07b818e3cc4f92aa0d9459cdd90402dcf32330412611d35f2fb495475321ce6d.json  query-0ea8244f71997de3659541b09e2166ce4344635fe6433bc18bd74793eef471e3.json  query-1065d946a2ee9d6bbb17963bc571ea69404e4f55a7d13227be375644ed215bc2.json  query-2e45ec5bdb01cff35c30f82ad5dcd2658883275ac883940d37a607d0f10f95c3.json  query-34f4485ad91c38589a6d74d03dab6742f5af26250481f9607ab308ddab57b4da.json  query-5e204b48098edc846737f87bbd9f5117c92df9f6098e9030cc17a4b0de62ebd2.json  query-65e1509b42fecfbdb16359d241e25ca6e3324356ace24b78edd6fb120f85375d.json  query-80ce34947d8fb0a4f851ea4722d385f5efaf1c6627d071eb20011a8becae842c.json  query-bad3a39453a5cbfdd75cab8d8ff35c5d0179d304fc207fccd714597383c08b80.json  query-d4606a1ab113576b5ff8aca7ad2a87c37238b7fb2cb57b8ebd6828fccbe8549f.json  query-fa81e21f120709f3c85a77704dcd443a986cca6b08514ccf04cf3bd32d21dc01.json
bonds_db_client/src/: bonds_table_client.rs  coupons_table_client.rs  error.rs  events_table_client.rs  lib.rs  user_manager.rs
bonds_db_collector/: Cargo.toml
bonds_db_collector/src/: collect_bonds_table.rs  collect_coupons_table.rs  collect_events_table.rs  main.rs  requests.rs
broker_api/: Cargo.toml  build.rs
broker_api/src/: lib.rs
history_market_data/: .env.example  Cargo.toml  README.md  candles_2024_12.txt  candles_2025_06.txt  candles_2025_07.txt  candles_2025_11.txt  candles_2025_12.txt  candles_2026_01.txt  candles_2026_02.txt  ql','-X','-A','-t',  qlite3
history_market_data/examples/: basic_usage.rs  candles_per_day.rs
history_market_data/src/: client.rs  config.rs  error.rs  lib.rs  models.rs
live_engine/: Cargo.toml  README.md
live_engine/src/: lib.rs  main.rs
portfolio/: Cargo.toml
portfolio/migrations/: 001_create_portfolio_tables.sql  002_create_users_table.sql  003_add_user_id_to_portfolio.sql  004_add_tinvest_and_strategy.sql  005_move_tinvest_to_portfolio.sql  006_add_pending_strategy_run.sql
portfolio/src/: client.rs  error.rs  lib.rs  models.rs
project1/: Cargo.toml
project1/src/: main.rs
project2/: Cargo.toml
project2/src/: main.rs
t-invest-api-rust/: Cargo.toml  build.rs
t-invest-api-rust/src/: decimal.rs  error.rs  lib.rs
timestamp_utils/: Cargo.toml
timestamp_utils/src/: lib.rs
trading_strategies/: Cargo.toml
trading_strategies/src/: diversified_short_duration.rs  high_yield_short.rs  lib.rs  strategies.rs  yield_maximizer.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: 404.html
web/src/: App.css  App.tsx
web/src/api/: auth.ts  bonds.ts  client.ts  portfolios.ts  strategies.ts  tinvest.ts
web/src/components/: Layout.tsx  ProtectedRoute.tsx
web/src/hooks/: usePortfolios.ts
web/src/pages/: LoginPage.tsx  PortfolioDetailPage.tsx  PortfolioListPage.tsx  SettingsPage.tsx  SignupPage.tsx
web/src/store/: auth-store.tsx
web/src/types/: api.ts
