[workspace]
resolver = "3"
members = [
    "t-invest-api-rust", "trading_strategies", "history_market_data",
]

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
chrono = "0.4.43"

tonic = { version = "0.14.2", features = ["tls-native-roots", "tls-ring", "gzip"] }
prost = "0.14.3"
prost-types = "0.14.3"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"

t-invest-api-rust = { path = "t-invest-api-rust" }
