[workspace]
resolver = "3"
members = [
    "t-invest-api-rust",
    "trading_strategies",
    "history_market_data",
    "backtest_engine",
    "live_engine",
    "portfolio",
    "api_server",
    "bonds_db_client",
    "bonds_db_collector", "timestamp_utils",
]

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
chrono = "0.4.43"
thiserror = "2.0.18"

tonic = { version = "0.14.2", features = ["tls-native-roots", "tls-ring", "gzip"] }
prost = "0.14.3"
prost-types = { version = "0.14.3", features = ["chrono"] }
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"

t-invest-api-rust = { path = "t-invest-api-rust", features = ["decimal"] }
trading_strategies = { path = "trading_strategies" }
history_market_data = { path = "history_market_data" }
backtest_engine = { path = "backtest_engine" }
bonds_db_client = { path = "bonds_db_client" }
timestamp_utils = { path = "timestamp_utils" }

rust_decimal = { version = "1.41.0", features = ["macros"] }
financial = "1.1.5"

dotenvy = "0.15.7"
uuid = { version = "1.23.0", features = ["v4"] }
serde = "1.0.228"
serde_json = "1.0.149"
bincode = "1.3.3"

async-trait = "0.1.89"
indicatif = "0.18.4"
