[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "rust_decimal"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.9"
rust_decimal = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
portfolio = { path = "../portfolio" }
history_market_data = { path = "../history_market_data" }
live_engine = { path = "../live_engine" }
t-invest-api-rust = { workspace = true }
prost-types = "0.13"
trading_strategies = { workspace = true }
backtest_engine = { workspace = true }
