[package]
name = "bonds_db_client"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros", "uuid", "tls-rustls-ring-native-roots"] }
uuid = { workspace = true }
t-invest-api-rust = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
timestamp_utils = { workspace = true }
