[package]
name = "live_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
t-invest-api-rust = { workspace = true }
rust_decimal = { workspace = true }
tokio = { workspace = true }
trading_strategies = { workspace = true }
history_market_data = { workspace = true }
chrono = { workspace = true }
backtest_engine = { workspace = true }
