[package]
name = "t-invest-api-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }

tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-prost = { workspace = true }

rust_decimal = { workspace = true, optional = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[features]
default = []
decimal = ["dep:rust_decimal"]
